<resources>
    <string name="app_name">NoticeBoard</string>
    <string name="title">Welcome to the NoticeBoard</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account">Do not have an account, <b>create</b></string>
    <string name="have_account">Have an account, <b>login</b></string>
    <string name="create">Create</string>
    <string name="register">Create an account</string>
    <string name="forgot">Forgot Password?</string>
    <string name="name">Full Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="faculty">Faculty</string>
    <string name="course">Course</string>
    <string name="year">Year</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name_of_person">Posted by </string>
    <string name="notice_title">Title of Notice and Date and Time Posted</string>
    <string name="notice_body">Body of the Notice</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="reg_no">REG NO</string>
    <string name="title_of_notice">Title of Notice</string>
    <string name="images">Attach Image [optional]</string>
    <string name="file">Attach file [optional]</string>
    <string name="selected">Selected File: None</string>
    <string name="file_name">No file selected</string>
    <string name="declaration">I declare that the above notice is true</string>
    <string name="post">Post Notice</string>
    <string name="audience">Target Audience</string>
    <string name="everyone">Everyone</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="date_time">Event Date</string>
    <string name="start_time">Event Start Time</string>
    <string name="end_time">Event End Time</string>
    <string name="location">Location</string>
    <string name="create_events">Create Event</string>
    <string name="reset">Password reset link will be sent to this Email Address</string>
    <string name="reset_button">Reset Password</string>
    <string name="helperText">Enter Strong Password</string>
    <string name="approve">Approve</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_info">Profile Account Information</string>
    <string name="update_profile">Update Profile</string>
    <string name="select_notification_sound">Select Notification Sound</string>
    <string name="official_picture">Profile Picture</string>
    <string name="official_name">Name</string>
    <string name="official_title">Title</string>
    <string name="department">Department</string>
    <string name="suggestion_title">Title</string>
    <string name="suggestion_body">Body</string>
    <string name="suggest">Suggest</string>
    <string name="note">Your suggestion is Secure and Confidential</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>